# dailyfresh

./: README.md  setup.cfg  setup.py
dailyfresh/: settings.py  utility.py
