[metadata]
name = epic-anomalydetection
version = attr: epic.cosmos.anomalydetection.version.__version__
description = epic-anomalydetection: python tools for descriptive and comparitive effectiveness studies
author = Epic
license = Epic

[options]
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = 
	find_namespace:
py_modules = 
	epic.cosmos.anomalydetection.version
install_requires = 
	importlib-resources
	ruptures==1.1.2

[options.packages.find]
include = 
	epic.cosmos.*

[options.extras_require]
all = 
	%(dev)s
	%(docs)s
dev = 
	autopep8>=1.3.5
	pytest-cov>=2.5.1
	pytest-json>=0.4.0
	pytest>=5.1.1
	mypy>=0.761
docs = 
	sphinx>=3.3.1
	sphinx-rtd-theme>=0.5.0

[tool:pytest]
addopts = --cov-config=setup.cfg --cov-report=html --cov=epic.cosmos.anomalydetection
testpaths = tests
json_report = coverage/test-report.json
jsonapi = True
filterwarnings = 
	ignore::UserWarning
	ignore::PendingDeprecationWarning

[coverage:run]
branch = True

[coverage:report]
fail_under = 85
omit = 
	*omit_this_file_from_coverage.py, # We don't want to test this file

[coverage:html]
directory = coverage/html-report

[mypy]
python_version > = 3.8
files = epic/cosmos/anomalydetection/**.py
follow_imports = silent
warn_unused_configs = True
ignore_missing_imports = True

[egg_info]
tag_build = 
tag_date = 0

